# c_sharp_exercises

./: .gitignore  README.md
array/: array.cs
bank/: Account.cs  Program.cs
beans/: Program.cs
bubble_sort/: Program.cs
countdown/: countdown.cs
december/binary_search/: Program.cs
december/family-graph/: Program.cs  data.csv  dataout.csv  family-graph.csproj
december/letter/: Program.cs
december/merge_sort/: Program.cs
december/pythagorean-triples/: Program.cs  pythagorean-triples.csproj
december/shapes/: Program.cs
divide_by_zero_exception/: Program.cs
exeption/: Program.cs
letter/: Program.cs
new/hash-algorithm/: Cargo.toml
new/hash-algorithm/src/: main.rs
new/stack/: Program.cs
number_guesser/: number_guesser.cs
october_november/animals/: Program.cs
october_november/bubble_sort/: Program.cs
october_november/divide_by_zero_exception/: Program.cs
october_november/exeption/: Program.cs
october_november/letter/: Program.cs
october_november/person/: Program.cs
october_november/routine/: Program.cs
october_november/rust/house/: Cargo.toml
october_november/rust/house/src/: main.rs
october_november/square/: Program.cs  square.cs
operations/: operations.cs
random_array/: Program.cs
routine/: Program.cs
string_fuctions/: Program.cs
