[package]
name = "hash-algorithm"
version = "0.1.0"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"

serde = { version = "1.0", features = ["derive"] }